# diplomarbeit

./: .ghci  .gitignore  ExprToMRM.hs  README.md  build-protos.sh  comm-diagram.text  demo-input.poly  diplomarbeit.cabal  run-evaluation.sh  run-sample.sh  save-benchmark.sh  syncheck.sh
ExprToDARE/: ExprToDARE.hs
ExprToMRM/: ExprToMRM.hs
ExprToMRM/Codec/: LBS.hs
Lib/Codec/: DARE.hs  LBS.hs
Lib/Data/: ExpressionTypes.hs  FieldTypes.hs  Helpers.hs
Lib/Math/FiniteFields/: F2Pow256.hs
Lib/Math/FiniteFields/Foreign/: FFInterface.chs  ntl_interface_easy.cpp  ntl_interface_easy.h
Test/: TestDARE.hs  TestF2Pow256.hs  TestHelpers.hs  TestMisc.hs
bench/: BenchDARE.hs  BenchRAE.hs
benchmark-results/: 2012-10-15_21-16-27.text  2012-10-17_19-52-30.text  2012-11-23_19-46-53.text  2012-11-23_19-56-24.text  2012-12-04_21-12-07.text  2012-12-05_03-24-38.text  2012-12-13_00-48-57.text
diplomarbeit-web/: .gitignore  LICENSE  devel.hs  diplomarbeit-web.cabal
diplomarbeit-web/Handler/: Home.hs
diplomarbeit-web/config/: keter.yaml  sqlite.yml
diplomarbeit-web/deploy/: Procfile
evaluation/: linux-F97-bench-500-10000-500.out  linux-bench-0-1000-10.out  linux-bench-500-10000-500.out  linux-bench-500-6000-500.out  linux-rad-F97-bench-500-10000-500.out  linux-rad-bench-0-500-50.out  linux-rad-bench-500-10000-500.out  mac-AIO-bench-F97-500-10000-500.out  mac-F97-bench-500-10000-500.out  mac-bench-500-10000-500.out  mac-bench-500-6000-500.out  mac-bench-F97-0-500-100.out  mac-rad-F97-bench-500-10000-500.out  mac-rad-bench-500-10000-500.out  poly-eval-running-time.txt
gen-src/Data/ProtoBufs/: OAFE.hs  RAE.hs  Setup.hs
gen-src/Data/ProtoBufs/OAFE/: LinearExpr.hs  OAFEConfig.hs  OAFEEvaluationRequest.hs  OAFEEvaluationResponse.hs
gen-src/Data/ProtoBufs/RAE/: MulTerm.hs  OAFERefRadicals.hs  OAFEReference.hs  RAE.hs
gen-src/Data/ProtoBufs/Setup/: SetupDavidToGoliath.hs  SetupGoliathToDavid.hs
lib/Codec/: DARE.hs  LBS.hs
lib/Data/: DAREEvaluation.hs  DARETypes.hs  ExpressionTypes.hs  FieldTypes.hs  Helpers.hs  LinearExpression.hs  OAFE.hs  OAFEComm.hs  SetupPhase.hs
lib/Data/Conduit/: ProtoBufConduit.hs
lib/Data/RAE/: Conduit.hs  Decoder.hs  Encoder.hs  Evaluation.hs  Types.hs
lib/Data/RAE/Encoder/Internal/: DRAC.hs  RAC.hs
lib/Functionality/: AllInOne.hs  David.hs  Goliath.hs  SetupPhase.hs  Token.hs
lib/Math/: MatrixOnLists.hs  Polynomials.hs
lib/Math/FiniteFields/: DebugField.hs  F2Pow256.hs  F97.hs
lib/Math/FiniteFields/Foreign/: FFInterface.chs  ntl_interface_easy.cpp  ntl_interface_easy.h
programs/: AllInOne.hs  David.hs  ExprToDARE.hs  ExprToMRM.hs  FiniteFieldMatrixTests.hs  Goliath.hs  RAEFun.hs  StaticConfiguration.hs  Token.hs
protos/: ARE.proto  OAFE.proto  RAE.proto  Setup.proto
scripts/: benchmark-poly-degrees.sh  build-haddock.sh  switch-implementation.sh  test-implementation.sh
test/: TestDARE.hs  TestF2Pow256.hs  TestMisc.hs  TestPolynomials.hs  TestRAE.hs
writings/presentation/: .gitattributes  .gitignore  VORBEREITUNG  bibliography.bib  build.sh  commands.tex  img-poly-deg-t-f97.tex  img-poly-deg-t.tex  presentation.tex  sample-polynomial.eps
writings/roadmap/: bibliography.bib  build.sh  commands.tex  discontinued.tex  implementation.tex  methods.tex  roadmap.tex  thesis.tex
writings/thesis/: abstract.tex  bibliography.bib  build.sh  clean.sh  commands.tex  conclusion.tex  discontinued.tex  evaluation.tex  implementation.tex  introduction.tex  methods.tex  protocols.tex  security.tex  texify-git-state.sh  thesis.tex  title.tex
writings/thesis/images/: .gitattributes  f97-poly-deg-t.tex  poly-deg-t-small.tex  poly-deg-t.tex  sample-polynomial.eps
