Name:           diplomarbeit
Version:        0.1
License:        GPL-3
License-File:   LICENSE
Author:         Johannes Weiß
Maintainer:     weiss@tux4u.de
Cabal-Version:  >= 1.10
Build-Type:     Simple
Category:       Thesis
Description:    Diplomarbeit of Johannes Weiss
Synopsis:       Diplomarbeit of Johannes Weiss

Source-Repository head
    Type:     git
    Location: https://github.com/weissi/diplomarbeit.git

Library
    Build-Depends:    base == 4.*,
                      HaskellForMaths >= 0.4,
                      monadcryptorandom >= 0.4,
                      crypto-api >= 0.10,
                      containers >= 0.4,
                      mtl >= 2.0,
                      dlist >= 0.5,
                      text >= 0.11,
                      bytestring >= 0.9,
                      blaze-builder >= 0.3,
                      failure >= 0.2
    Default-Language: Haskell2010
    Exposed-modules:  Codec.DARE, Codec.LBS, Data.ExpressionTypes,
                      Data.FieldTypes, Math.FiniteFields.F2Pow256,
                      Data.LinearExpression,
                      Math.FiniteFields.Foreign.FFInterface,
                      Data.Helpers, Math.MatrixOnLists, Data.DARETypes
                      Data.DAREEvaluation
    include-dirs:     lib/Math/FiniteFields/Foreign
    hs-source-dirs:   lib
    GHC-Options:      -Wall
    GHC-Options:      -Werror
    GHC-Options:      -rtsopts -auto-all -caf-all
    Build-tools:      c2hs -any
    Extra-libraries:  ntl, stdc++
    C-Sources:        lib/Math/FiniteFields/Foreign/ntl_interface_easy.cpp
    CC-Options:       -Wall -pedantic -ggdb

Executable ExprToMRM
    main-is:          ExprToMRM.hs
    Default-Language: Haskell2010
    build-depends:    base, text >= 0.11, containers >= 0.4, dlist >= 0.5,
                      mtl >= 2.0, diplomarbeit
    hs-source-dirs:   programs
    GHC-Options:      -Wall
    GHC-Options:      -Werror
    GHC-Prof-Options: -rtsopts -auto-all -caf-all

Executable ExprToDARE
    main-is:          ExprToDARE.hs
    Default-Language: Haskell2010
    build-depends:    base, monadcryptorandom >= 0.4, crypto-api >= 0.10,
                      containers >= 0.4, HaskellForMaths >= 0.4, dlist >= 0.5,
                      diplomarbeit
    hs-source-dirs:   programs
    GHC-Options:      -Wall
    GHC-Options:      -Werror
    GHC-Prof-Options: -rtsopts -auto-all -caf-all

Executable FiniteFieldMatrixTests
    main-is:          FiniteFieldMatrixTests.hs
    Default-Language: Haskell2010
    hs-source-dirs:   programs
    build-depends:    base,
                      diplomarbeit,
                      hmatrix >= 0.14
    GHC-Options:      -Wall
    GHC-Prof-Options: -rtsopts -auto-all -caf-all

Test-Suite TestDARE
    type:             exitcode-stdio-1.0
    main-is:          TestDARE.hs
    Default-Language: Haskell2010
    build-depends:    base, HTF >= 0.9, HaskellForMaths >= 0.4,
                      crypto-api >= 0.10,
                      monadcryptorandom >= 0.4, containers >= 0.4, dlist >= 0.5,
                      mtl >= 2.0, random >= 1.0, diplomarbeit
    hs-source-dirs:   test
    GHC-Prof-Options: -rtsopts -auto-all -caf-all

Test-Suite TestF2Pow256
    type:             exitcode-stdio-1.0
    main-is:          TestF2Pow256.hs
    Default-Language: Haskell2010
    build-depends:    base, HTF >= 0.9, diplomarbeit
    hs-source-dirs:   test
    GHC-Prof-Options: -rtsopts -auto-all -caf-all

Test-Suite TestMisc
    type:             exitcode-stdio-1.0
    main-is:          TestMisc.hs
    Default-Language: Haskell2010
    build-depends:    base, HTF >= 0.9, diplomarbeit, bytestring >= 0.9
    hs-source-dirs:   test
    GHC-Prof-Options: -rtsopts -auto-all -caf-all

Benchmark BenchDARE
    Type:             exitcode-stdio-1.0
    HS-Source-Dirs:   bench
    Main-Is:          BenchDARE.hs
    Default-Language: Haskell2010
    Build-Depends:    base,
                      diplomarbeit,
                      criterion >= 0.6,
                      HaskellForMaths >= 0.4,
                      crypto-api >= 0.10,
                      monadcryptorandom >= 0.4,
                      containers >= 0.4
