Name:           diplomarbeit
Version:        0.1
License:        GPL-3
License-File:   LICENSE
Author:         Johannes Weiß
Maintainer:     weiss@tux4u.de
Cabal-Version:  >= 1.10
Build-Type:     Simple
Category:       Thesis
Description:    Diplomarbeit of Johannes Weiß
Synopsis:       Diplomarbeit of Johannes Weiß

Source-Repository head
    Type:     git
    Location: https://github.com/weissi/diplomarbeit.git

Library
    Build-Depends:    base == 4.*,
                      HaskellForMaths >= 0.4,
                      monadcryptorandom >= 0.5,
                      crypto-api >= 0.10,
                      containers >= 0.4,
                      mtl >= 2.0,
                      dlist >= 0.5,
                      text >= 0.11,
                      bytestring >= 0.10,
                      blaze-builder >= 0.3,
                      failure >= 0.2,
                      protocol-buffers >= 2.0,
                      protocol-buffers-descriptor >= 2.0,
                      conduit >= 0.5,
                      binary >= 0.5,
                      network-conduit >= 0.6,
                      unordered-containers >= 0.2,
                      network >= 2.4,
                      transformers >= 0.3,
                      monad-control >= 0.3,
                      vector >= 0.9,
                      stm-conduit >= 0.4.3,
                      stm-chans >= 1.3,
                      stm >= 2.4,
                      resourcet >= 0.4,
                      regex-compat >= 0.95
    Default-Language: Haskell2010
    Exposed-Modules:  Codec.LBS,
                      Data.RAE.Conduit,
                      Data.RAE.Encoder,
                      Data.RAE.Decoder,
                      Data.RAE.Types,
                      Data.RAE.Evaluation,
                      Data.ExpressionTypes,
                      Data.FieldTypes,
                      Math.FiniteFields.F2Pow256,
                      Math.FiniteFields.F97,
                      Math.FiniteFields.DebugField,
                      Data.LinearExpression,
                      Data.Helpers,
                      Math.MatrixOnLists,
                      Data.OAFE,
                      Data.Conduit.ProtoBufConduit,
                      Data.RAE.Encoder.Internal.DRAC,
                      Data.RAE.Encoder.Internal.RAC,
                      Functionality.SetupPhase,
                      Functionality.David,
                      Functionality.Token
    Other-Modules:    Math.FiniteFields.Foreign.FFInterface,
                      Data.ProtoBufs.OAFE,
                      Data.ProtoBufs.OAFE.OAFEConfig,
                      Data.ProtoBufs.OAFE.LinearExpr,
                      Data.ProtoBufs.OAFE.OAFEEvaluationRequest,
                      Data.ProtoBufs.OAFE.OAFEEvaluationResponse,
                      Data.ProtoBufs.RAE.RAE,
                      Data.ProtoBufs.RAE.MulTerm,
                      Data.ProtoBufs.RAE.OAFEReference,
                      Data.ProtoBufs.Setup.SetupDavidToGoliath,
                      Data.ProtoBufs.Setup.SetupGoliathToDavid
    include-dirs:     lib/Math/FiniteFields/Foreign
    hs-source-dirs:   lib, gen-src
    GHC-Options:      -Wall
    --GHC-Options:      -Werror
    GHC-Prof-Options: -rtsopts -auto-all -caf-all
    Build-tools:      c2hs -any
    Extra-libraries:  ntl, stdc++
    C-Sources:        lib/Math/FiniteFields/Foreign/ntl_interface_easy.cpp
    CC-Options:       -Wall -pedantic -ggdb

Executable David
    main-is:          David.hs
    Default-Language: Haskell2010
    build-depends:    base,
                      diplomarbeit,
                      bytestring >= 0.10,
                      conduit >= 0.5,
                      network-conduit >= 0.6,
                      transformers >= 0.3,
                      stm >= 2.4,
                      stm-conduit >= 0.4.3,
                      stm-chans >= 1.3,
                      containers >= 0.4,
                      unordered-containers >= 0.2,
                      time >= 1.4,
                      vector >= 0.9,
                      text >= 0.11,
                      resourcet >= 0.4,
                      monadcryptorandom >= 0.5
    hs-source-dirs:   programs
    GHC-Options:      -Wall
    --GHC-Options:      -Werror
    GHC-Options:      -rtsopts
    GHC-Prof-Options: -rtsopts -auto-all -caf-all

Executable Goliath
    main-is:          Goliath.hs
    Default-Language: Haskell2010
    build-depends:    base,
                      diplomarbeit,
                      bytestring >= 0.10,
                      conduit >= 0.5,
                      network-conduit >= 0.6,
                      transformers >= 0.3,
                      stm >= 2.4,
                      crypto-api >= 0.10,
                      containers >= 0.4,
                      vector >= 0.9,
                      unordered-containers >= 0.2,
                      resourcet >= 0.4,
                      text >= 0.11,
                      monadcryptorandom >= 0.5
    hs-source-dirs:   programs
    GHC-Options:      -Wall
    --GHC-Options:      -Werror
    GHC-Options:      -rtsopts
    GHC-Prof-Options: -rtsopts -auto-all -caf-all

Executable Token
    main-is:          Token.hs
    Default-Language: Haskell2010
    build-depends:    base,
                      diplomarbeit,
                      bytestring >= 0.10,
                      conduit >= 0.5,
                      network-conduit >= 0.6,
                      transformers >= 0.3,
                      stm >= 2.4,
                      containers >= 0.4,
                      time >= 1.4,
                      vector >= 0.9,
                      unordered-containers >= 0.2,
                      network >= 2.4,
                      resourcet >= 0.4,
                      monadcryptorandom >= 0.5
    hs-source-dirs:   programs
    GHC-Options:      -Wall
    --GHC-Options:      -Werror
    GHC-Options:      -rtsopts
    GHC-Prof-Options: -rtsopts -auto-all -caf-all

Test-Suite TestRAE
    type:             exitcode-stdio-1.0
    main-is:          TestRAE.hs
    Default-Language: Haskell2010
    build-depends:    base, HTF >= 0.9, HaskellForMaths >= 0.4,
                      crypto-api >= 0.10,
                      monadcryptorandom >= 0.5, containers >= 0.4, dlist >= 0.5,
                      mtl >= 2.0, random >= 1.0, diplomarbeit,
                      stm-conduit >= 0.4.3,
                      stm-chans >= 1.3,
                      stm >= 2.4,
                      conduit >= 0.5,
                      transformers >= 0.3
    hs-source-dirs:   test
    GHC-Prof-Options: -rtsopts -auto-all -caf-all

Test-Suite TestF2Pow256
    type:             exitcode-stdio-1.0
    main-is:          TestF2Pow256.hs
    Default-Language: Haskell2010
    build-depends:    base, HTF >= 0.9, diplomarbeit
    hs-source-dirs:   test
    GHC-Prof-Options: -rtsopts -auto-all -caf-all

Test-Suite TestMisc
    type:             exitcode-stdio-1.0
    main-is:          TestMisc.hs
    Default-Language: Haskell2010
    build-depends:    base, HTF >= 0.9, diplomarbeit, bytestring >= 0.10
    hs-source-dirs:   test
    GHC-Prof-Options: -rtsopts -auto-all -caf-all

Benchmark BenchRAE
    Type:             exitcode-stdio-1.0
    HS-Source-Dirs:   bench
    Main-Is:          BenchRAE.hs
    Default-Language: Haskell2010
    Build-Depends:    base,
                      diplomarbeit,
                      criterion >= 0.6,
                      HaskellForMaths >= 0.4,
                      crypto-api >= 0.10,
                      monadcryptorandom >= 0.5,
                      containers >= 0.4

--Executable ExprToMRM
--    main-is:          ExprToMRM.hs
--    Default-Language: Haskell2010
--    build-depends:    base, text >= 0.11, containers >= 0.4, dlist >= 0.5,
--                      mtl >= 2.0, diplomarbeit
--    hs-source-dirs:   programs
--    GHC-Options:      -Wall
--    GHC-Options:      -Werror
--    GHC-Prof-Options: -rtsopts -auto-all -caf-all

Executable RAEFun
    main-is:          RAEFun.hs
    Default-Language: Haskell2010
    build-depends:    base, monadcryptorandom >= 0.5, crypto-api >= 0.10,
                      containers >= 0.4, HaskellForMaths >= 0.4, dlist >= 0.5,
                      diplomarbeit, bytestring >= 0.10, conduit >= 0.5
    hs-source-dirs:   programs
    GHC-Options:      -Wall
    --GHC-Options:      -Werror
    GHC-Prof-Options: -rtsopts -auto-all -caf-all
